--- a/27-29.09.2021/image.html
+++ b/27-29.09.2021/image.html
@@ -34,6 +34,32 @@
                 <span class="weight4">54,938</span>
             </td>
         </tr>
+    <tr>
+        <td style="background-color: yellow">
+            <span class="element5">Ge</span>
+            <span class="number5">32</span>
+            <span class="name5">Германий</span>
+            <span class="weight5">72,59</span>
+        </td>
+        <td style="background-color: yellow">
+            <span class="element6">As</span>
+            <span class="number6">33</span>
+            <span class="name6">Мышьяк</span>
+            <span class="weight6">74,9216</span>
+        </td>
+        <td style="background-color: yellow">
+            <span class="element7">Se</span>
+            <span class="number7">34</span>
+            <span class="name7">Селен</span>
+            <span class="weight7">78,96</span>
+        </td>
+        <td style="background-color: yellow">
+            <span class="element8">Br</span>
+            <span class="number8">35</span>
+            <span class="name8">Бром</span>
+            <span class="weight8">79,904</span>
+        </td>
+    </tr>
 </table>
 </body>
 </html>
