--- a/27-29.09.2021/image.html
+++ b/27-29.09.2021/image.html
@@ -7,57 +7,132 @@
 </head>
 <body>
 <table class="my_table" align="center">
-    <caption class="caption">Отрывок таблицы Менделеева</caption>
-        <tr>
-            <td>
+    <caption class="caption">16 ЭЛЕМЕНТОВ ТАБЛИЦЫ Д.И.МЕНДЕЛЕЕВА</caption>
+    <tr class="first_line">
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%A2%D0%B8%D1%82%D0%B0%D0%BD_(%D1%8D%D0%BB%D0%B5%D0%BC%D0%B5%D0%BD%D1%82)
+               style="text-decoration: none">
                 <span class="element1">Ti</span>
                 <span class="number1">22</span>
                 <span class="name1">Титан</span>
                 <span class="weight1">47,90</span>
-            </td>
-            <td>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%92%D0%B0%D0%BD%D0%B0%D0%B4%D0%B8%D0%B9
+               style="text-decoration: none">
                 <span class="element2">V</span>
                 <span class="number2">23</span>
                 <span class="name2">Ванадий</span>
                 <span class="weight2">50,942</span>
-            </td>
-            <td>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%A5%D1%80%D0%BE%D0%BC style="text-decoration: none">
                 <span class="element3">Cr</span>
                 <span class="number3">24</span>
                 <span class="name3">Хром</span>
                 <span class="weight3">51,996</span>
-            </td>
-            <td>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D0%B3%D0%B0%D0%BD%D0%B5%D1%86
+               style="text-decoration: none">
                 <span class="element4">Mn</span>
                 <span class="number4">25</span>
                 <span class="name4">Марганец</span>
                 <span class="weight4">54,938</span>
-            </td>
-        </tr>
-    <tr>
-        <td style="background-color: yellow">
-            <span class="element5">Ge</span>
-            <span class="number5">32</span>
-            <span class="name5">Германий</span>
-            <span class="weight5">72,59</span>
         </td>
-        <td style="background-color: yellow">
-            <span class="element6">As</span>
-            <span class="number6">33</span>
-            <span class="name6">Мышьяк</span>
-            <span class="weight6">74,9216</span>
+    </tr>
+    <tr class="second_line">
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%93%D0%B5%D1%80%D0%BC%D0%B0%D0%BD%D0%B8%D0%B9
+               style="text-decoration: none">
+                <span class="element5">Ge</span>
+                <span class="number5">32</span>
+                <span class="name5">Германий</span>
+                <span class="weight5">72,59</span>
         </td>
-        <td style="background-color: yellow">
-            <span class="element7">Se</span>
-            <span class="number7">34</span>
-            <span class="name7">Селен</span>
-            <span class="weight7">78,96</span>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%9C%D1%8B%D1%88%D1%8C%D1%8F%D0%BA style="text-decoration: none">
+                <span class="element6">As</span>
+                <span class="number6">33</span>
+                <span class="name6">Мышьяк</span>
+                <span class="weight6">74,9216</span>
         </td>
-        <td style="background-color: yellow">
-            <span class="element8">Br</span>
-            <span class="number8">35</span>
-            <span class="name8">Бром</span>
-            <span class="weight8">79,904</span>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%BB%D0%B5%D0%BD style="text-decoration: none">
+                <span class="element7">Se</span>
+                <span class="number7">34</span>
+                <span class="name7">Селен</span>
+                <span class="weight7">78,96</span>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%91%D1%80%D0%BE%D0%BC style="text-decoration: none">
+                <span class="element8">Br</span>
+                <span class="number8">35</span>
+                <span class="name8">Бром</span>
+                <span class="weight8">79,904</span>
+        </td>
+    </tr>
+    <tr class="third_line">
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%A6%D0%B8%D1%80%D0%BA%D0%BE%D0%BD%D0%B8%D0%B9
+               style="text-decoration: none">
+                <span class="element9">Zr</span>
+                <span class="number9">40</span>
+                <span class="name9">Цирконий</span>
+                <span class="weight9">90,22</span>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%9D%D0%B8%D0%BE%D0%B1%D0%B8%D0%B9 style="text-decoration: none">
+                <span class="element10">Nb</span>
+                <span class="number10">41</span>
+                <span class="name10">Ниобий</span>
+                <span class="weight10">92,906</span>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%9C%D0%BE%D0%BB%D0%B8%D0%B1%D0%B4%D0%B5%D0%BD
+               style="text-decoration: none">
+                <span class="element11">Мо</span>
+                <span class="number11">42</span>
+                <span class="name11">Молибден</span>
+                <span class="weight11">95,94</span>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%A2%D0%B5%D1%85%D0%BD%D0%B5%D1%86%D0%B8%D0%B9
+               style="text-decoration: none">
+                <span class="element12">Тс</span>
+                <span class="number12">43</span>
+                <span class="name12">Технеций</span>
+                <span class="weight12">[99]</span>
+        </td>
+    </tr>
+    <tr class="fourth_line">
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%9E%D0%BB%D0%BE%D0%B2%D0%BE style="text-decoration: none">
+                <span class="element13">Sn</span>
+                <span class="number13">50</span>
+                <span class="name13">Олово</span>
+                <span class="weight13">118,69</span>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%A1%D1%83%D1%80%D1%8C%D0%BC%D0%B0 style="text-decoration: none">
+                <span class="element14">Sb</span>
+                <span class="number14">51</span>
+                <span class="name14">Сурьма</span>
+                <span class="weight14">121,75</span>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%A2%D0%B5%D0%BB%D0%BB%D1%83%D1%80 style="text-decoration: none">
+                <span class="element15">Те</span>
+                <span class="number15">52</span>
+                <span class="name15">Теллур</span>
+                <span class="weight15">127,6</span>
+        </td>
+        <td>
+            <a href=https://ru.wikipedia.org/wiki/%D0%98%D0%BE%D0%B4 style="text-decoration: none">
+                <span class="element16">I</span>
+                <span class="number16">53</span>
+                <span class="name16">Йод</span>
+                <span class="weight16">126,9044</span>
         </td>
     </tr>
 </table>
