--- a/04.10.2021/index.html
+++ b/04.10.2021/index.html
@@ -25,8 +25,7 @@ initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <div class="Me" title="Marmaris,2021">
             <a href="https://www.google.com/maps/place/%D0%9C%D0%B0%D1%80%D0%BC%D0%B0%D1%80%D0%B8%D1%81,
     +%D0%9C%D1%83%D0%B3%D0%BB%D0%B0,+%D0%A2%D1%83%D1%80%D1%86%D0%B8%D1%8F/@36.8481181,28.2439359,6927m/data=!3m2!1e3!4b1!4m5!3m4!1s0x14
-    bfbdbff1961523:0xdf8e730ed1eeb2be!8m2!3d36.8549692!4d28.2709122?hl=ru"><img src="images/Me.JPG" width="310"
-                                                                                height="550" alt="ME">
+    bfbdbff1961523:0xdf8e730ed1eeb2be!8m2!3d36.8549692!4d28.2709122?hl=ru"><img src="images/Me.JPG" width="350" height="550">
             </a>
         </div>
 <!--        <div class="Name" align="center">Булдаков Антон</div>-->
